# kkmeans

./: .travis.yml  CMakeLists.txt  Doxyfile  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.md5
data/: points
src/: CMakeLists.txt  main.cpp
